--- a/ShelfDexMvx/src/ShelfDexMvx.Droid/ShelfDexMvx.Droid.csproj
+++ b/ShelfDexMvx/src/ShelfDexMvx.Droid/ShelfDexMvx.Droid.csproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProguardConfiguration Include="proguard.cfg" />
+    <AndroidAsset Include="Assets\Lottie\ani_spinner.json" />
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +143,7 @@
       <Name>ShelfDexMvx.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
